--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,17 @@
 
 
 
+    <EditText
+        android:id="@+id/editText"
+        android:hint="Password"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Enter password"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
