--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="grey">#808080</color>
+    <color name="black">#000000</color>
+    <color name="Blue">#0000FF</color>
+    <color name= "NavyBlue">#000033</color>
+    <color name= "White">#FFFFFF</color>
+
 </resources>
